# AppRemote

./: CMakeLists.txt  EventCache.cpp  EventCache.h  EventController.cpp  EventController.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FrameCache.cpp  FrameCache.h  README.md  SDL_Screen.cpp  SDL_Screen.h  SocketConnection.cpp  SocketConnection.h  main.cpp
AppProcessDemo/: README.md
AppProcessDemo/app/: build.gradle
AppProcessDemo/app/src/main/: AndroidManifest.xml
AppProcessDemo/app/src/main/java/com/cry/cry/appprocessdemo/: EventController.java  EventFactory.java  HelloWorld.java  IO.java  ScreenRecorder.java
AppProcessDemo/app/src/main/java/com/cry/cry/appprocessdemo/bean/: DisplayInfo.java  Size.java
AppProcessDemo/app/src/main/java/com/cry/cry/appprocessdemo/refect/: DisplayManager.java  InputManager.java  PowerManager.java  ServiceManager.java  SurfaceControl.java
